# tokenizer

./: pyproject.toml
src/tokenizer/: main.py
