[project]
name = "tokenizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Wojciech Drzazgowski",email = "wojciech.drzazgowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "tokenizer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
